--- a/index.html
+++ b/index.html
@@ -4,20 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Engineering Portfolio</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <!-- Your Custom Styles (Must be after Bootstrap) -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Jackson's Engineering Portfolio</h1>
+        <h1>Jackson's Personal Website</h1>
         <nav>
             <a href="index.html">Home</a>
             <a href="projects.html">Projects</a>
         </nav>
     </header>
-    <section class="hero">
-        <h2>Welcome to My Portfolio</h2>
-        <p>Showcasing my engineering projects and innovations.</p>
-    </section>
+
+    <main>
+        <section class="hero">
+            <h2>Welcome to My Portfolio</h2>
+            <p>Showcasing my engineering projects and innovations.</p>
+            <a class="btn-custom" href="projects.html">Projects</a>
+        </section>
+    </main>
+
     <footer>
         <p>&copy; 2025 Jackson</p>
     </footer>
