--- a/projects.html
+++ b/projects.html
@@ -16,14 +16,14 @@
     </header>
     <section class="projects">
         <div class="project-card">
-            <h3>Robotic Arm</h3>
-            <p>A smart, soft, and compliant end effector project.</p>
-            <a href="project.html?id=1">View Details</a>
+            <h3>Compliant End Effector</h3>
+            <p>A smart, and compliant end double finger claw with PID control algorithm.</p>
+            <a class="btn-custom" href="project.html?id=1">View Details</a>
         </div>
         <div class="project-card">
-            <h3>Solar Car Suspension</h3>
-            <p>Enhancing the suspension system of a solar car.</p>
-            <a href="project.html?id=2">View Details</a>
+            <h3>Cycloidal Drive</h3>
+            <p>A 1:9 gear ratio homemade cycloidal drive with close to no backlash.</p>
+            <a class="btn-custom" href="project.html?id=2">View Details</a>
         </div>
     </section>
     <footer>
