--- a/projects.html
+++ b/projects.html
@@ -14,18 +14,22 @@
             <a href="projects.html">Projects</a>
         </nav>
     </header>
-    <section class="projects">
-        <div class="project-card">
-            <h3>Compliant End Effector</h3>
-            <p>A smart, and compliant end double finger claw with PID control algorithm.</p>
-            <a class="btn-custom" href="project.html?id=1">View Details</a>
-        </div>
-        <div class="project-card">
-            <h3>Cycloidal Drive</h3>
-            <p>A 1:9 gear ratio homemade cycloidal drive with close to no backlash.</p>
-            <a class="btn-custom" href="project.html?id=2">View Details</a>
-        </div>
-    </section>
+
+    <main>
+        <section class="projects">
+            <div class="project-card">
+                <h3>Compliant End Effector</h3>
+                <p>A smart, and compliant end double finger claw with PID control algorithm.</p>
+                <a class="btn-custom" href="project.html?id=1">View Details</a>
+            </div>
+            <div class="project-card">
+                <h3>Cycloidal Drive</h3>
+                <p>A 1:9 gear ratio homemade cycloidal drive with close to no backlash.</p>
+                <a class="btn-custom" href="project.html?id=2">View Details</a>
+            </div>
+        </section>
+    </main>
+
     <footer>
         <p>&copy; 2025 Jackson</p>
     </footer>
