--- a/Project Pages/Cycloidal Drive.html
+++ b/Project Pages/Cycloidal Drive.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Details</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <header>
-        <h1>Project Details</h1>
+        <h1>Cycloidal Drive</h1>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="projects.html">Projects</a>
+            <a href="../index.html">Home</a>
+            <a href="../projects.html">Projects</a>
         </nav>
     </header>
     <section class="project-details">
-        <h2 id="project-title"></h2>
-        <p id="project-description"></p>
+        <h2>Cycloidal Drive</h2>
+        <p>lorum ipsum</p>
     </section>
     <footer>
         <p>&copy; 2025 Jackson</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="../script.js"></script>
 </body>
 </html>
