--- a/projects.html
+++ b/projects.html
@@ -20,12 +20,12 @@
             <div class="project-card">
                 <h3>Compliant End Effector</h3>
                 <p>A smart, and compliant end double finger claw with PID control algorithm.</p>
-                <a class="btn-custom" href="project.html?id=1">View Details</a>
+                <a class="btn-custom" href="Project Pages/Cycloidal Drive.html">View Details</a>
             </div>
             <div class="project-card">
                 <h3>Cycloidal Drive</h3>
                 <p>A 1:9 gear ratio homemade cycloidal drive with close to no backlash.</p>
-                <a class="btn-custom" href="project.html?id=2">View Details</a>
+                <a class="btn-custom" href="Project Pages/Cycloidal Drive.html">View Details</a>
             </div>
         </section>
     </main>
