--- a/index.html
+++ b/index.html
@@ -18,9 +18,12 @@
 
     <main>
         <section class="hero">
-            <h2>Welcome to My Portfolio</h2>
-            <p>Showcasing my engineering projects and innovations.</p>
-            <a class="btn-custom" href="projects.html">Projects</a>
+            <h2>Engineering Portfolio</h2>
+            <div class="image-container">
+                <img src="images/Cycloidal Drive/CycloidalDriveSectionView.png" alt="Cycloidal Drive Section View" class="project-image">
+                <img src="images/Compliant End Effector/FingerAssembly.png" alt="Cycloidal Drive Section View" class="project-image">
+            </div>
+            <a class="btn-custom" href="projects.html">View Projects</a>
         </section>
     </main>
 
