--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     </header>
 
     <main>
+        <section class="intro">
+            <img src="images/KoraI3A7385 (1) 2.JPG" alt="intro image">
+            <p>My name is Jackson, and I am a highschool senior from Crescent School Toronto. I am highly passioante about engineering, specificially, mechanical engineering and robotics.</p>
+        </section>
+
         <section class="hero">
             <h2>Engineering Portfolio</h2>
             <div class="image-container">
