finished a new page

--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
             <div class="project-card">
                 <h3>Compliant End Effector</h3>
                 <p>A smart, and compliant end double finger claw with PID control algorithm.</p>
-                <a class="btn-custom" href="Project Pages/Cycloidal Drive.html">View Details</a>
+                <a class="btn-custom" href="Project Pages/Compliant End Effector.html">View Details</a>
             </div>
             <div class="project-card">
                 <h3>Cycloidal Drive</h3>
