--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main>
         <section class="intro">
             <img src="images/KoraI3A7385 (1) 2.JPG" alt="intro image">
-            <p>My name is Jackson, and I am a highschool senior from Crescent School Toronto. I am highly passioante about engineering, specificially, mechanical engineering and robotics.</p>
+            <p>My name is Jackson, and I am a highschool senior from Crescent School Toronto. I am highly passionate about engineering, specificially, mechanical engineering and robotics.</p>
         </section>
 
         <section class="hero">
