created a new page for Fatigue Stress Machine

--- a/projects.html
+++ b/projects.html
@@ -27,6 +27,11 @@
                 <p>A 1:9 gear ratio homemade cycloidal drive with close to no backlash.</p>
                 <a class="btn-custom" href="Project Pages/Cycloidal Drive.html">View Details</a>
             </div>
+            <div class="project-card">
+                <h3>Indentation Fatigue Testing Machine</h3>
+                <p>A fatigue testing machine to evaluate strengths of different solid infill patterns</p>
+                <a class="btn-custom" href="Project Pages/Fatigue Machine.html">View Details</a>
+            </div>
         </section>
     </main>
 
