--- a/Project Pages/Cycloidal Drive.html
+++ b/Project Pages/Cycloidal Drive.html
@@ -63,6 +63,7 @@
                 Your browser does not support the video tag.
             </video>
         </div>
+        <a href="https://github.com/JacksonDingJD/Jackson-s-Personal-Website/releases/tag/v1.0" class="btn-custom">Download Cycloidal Drive (.STEP)</a>
     </section>
     <footer>
         <p>&copy; 2025 Jackson</p>
