--- a/projects.html
+++ b/projects.html
@@ -32,6 +32,11 @@
                 <p>A fatigue testing machine to evaluate strengths of different solid infill patterns</p>
                 <a class="btn-custom" href="Project Pages/Fatigue Machine.html">View Details</a>
             </div>
+            <div class="project-card">
+                <h3>Cycloidal Pattern Drawing Machine</h3>
+                <p>A cycloidal art pattern drawing machine for students with developmental disabilities</p>
+                <a class="btn-custom" href="Project Pages/Drawing Machine.html">View Details</a>
+            </div>
         </section>
     </main>
 
