added a new project pawtwhole

--- a/projects.html
+++ b/projects.html
@@ -37,6 +37,11 @@
                 <p>A cycloidal art pattern drawing machine for students with developmental disabilities</p>
                 <a class="btn-custom" href="Project Pages/Drawing Machine.html">View Details</a>
             </div>
+            <div class="project-card">
+                <h3>Pothole Detection TinyML Project</h3>
+                <p>A TinyML-based road condition sensing system that turns everyday vehicles into mobile road sensors.</p>
+                <a class="btn-custom" href="Project Pages/PawtWhole Detection.html">View Details</a>
+            </div>
         </section>
     </main>
 
